Show selection highlight even if we have a composition underline

We currently have some logic (dating back to 2005) to not show the selection
highlight if we're also showing a composition underline. We're not 100% sure
why this (probably to avoid some sort of interaction between the selection
color and the underline), but we think it's unnecessary. There are already
certain interactions we don't do anything about, for example the composition
underline matching the background color of the text.

This CL removes this logic so we can show the selection highlight while the
Android Voice IME (which keeps an underlined composition range open) is
active.

BUG=628670
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2896273003
Cr-Commit-Position: refs/heads/master@{#476178}

Former-commit-id: 1053faaf3d0458556000acde907116a5d869c815